generated-tests/tests/snapshots/tsx/tsx__test_generated_ternary_expression.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
condition1 ? trueVal : falseVal

AST:
(program
  (expression_statement
    (ternary_expression
      (identifier condition1)
      (identifier trueVal)
      (identifier falseVal)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "condition1",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 1,
            end_line: 1,
            end_column: 11,
        },
        SerializableUsage {
            name: "trueVal",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 14,
            end_line: 1,
            end_column: 21,
        },
        SerializableUsage {
            name: "falseVal",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 24,
            end_line: 1,
            end_column: 32,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
