generated-tests/tests/snapshots/tsx/tsx__test_generated_this_type.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
class TestClass3 { method3(): this { return this; } }

AST:
(program
  (class_declaration
    (type_identifier)
    (class_body
      (method_definition
        (property_identifier)
        (formal_parameters)
        (type_annotation
          (this_type)
        )
        (statement_block
          (return_statement
            (this)
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "TestClass3",
            line_number: 1,
            definition_type: ClassDefinition,
            scope: Some(
                "TestClass3",
            ),
        },
        Definition {
            name: "method3",
            line_number: 1,
            definition_type: FunctionDefinition,
            scope: Some(
                "TestClass3",
            ),
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "method3",
            kind: FieldExpression,
            scope: Some(
                "TestClass3",
            ),
            start_line: 1,
            start_column: 20,
            end_line: 1,
            end_column: 27,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
