generated-tests/tests/snapshots/tsx/tsx__test_generated_throw_statement.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
throw new Error(error);

AST:
(program
  (throw_statement
    (new_expression
      (identifier Error)
      (arguments
        (identifier error)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
